--- a/find.html
+++ b/find.html
@@ -80,8 +80,8 @@
               <img
                 src="https://stickershop.line-scdn.net/stickershop/v1/product/718/LINEStorePC/main.png;compress=true"
               />
-              <div class="oepn-post__heart-count">
-                <i class="fas fa-heart fa-xs"><span>326</span></i>
+              <div class="open-post__heart-count">
+                <i class="fas fa-heart fa-xs"></i><span>326</span>
               </div>
             </div>
           </div>
