--- a/friends.html
+++ b/friends.html
@@ -103,6 +103,9 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/011ec84722.js"
