--- a/chat.html
+++ b/chat.html
@@ -73,6 +73,10 @@
         </button>
       </div>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+      <span> plz, reduce the screen size!</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/011ec84722.js"
       crossorigin="anonymous"
