--- a/chats.html
+++ b/chats.html
@@ -82,7 +82,10 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+      <span> plz, reduce the screen size!</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/011ec84722.js"
       crossorigin="anonymous"
