--- a/friends.html
+++ b/friends.html
@@ -106,7 +106,10 @@
     <div id="splash-screen">
       <i class="fas fa-comment"></i>
     </div>
-
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+      <span> plz, reduce the screen size!</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/011ec84722.js"
       crossorigin="anonymous"
