--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+      <span> plz, reduce the screen size!</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/011ec84722.js"
       crossorigin="anonymous"
